--- a/css/loginForm.css
+++ b/css/loginForm.css
@@ -4,7 +4,7 @@
         align-self: center;
         order: 1;
     }
-    a:hover{
+    #registrate-link:hover{
         color: var(--colorBtnRegistro);
     }
 }
