--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,3 @@
-.main-content {    
-    padding: 20px;
-    background-color: #fff;
-    margin-bottom: 20px;
-}
-
 .banner_img{
     width: 100%;
     height: 500px;   
@@ -11,6 +5,11 @@
     margin-bottom: 10px;    
 }
 
+.main-content {    
+    padding: 20px 50px;
+    background-color: #fff;
+    margin-bottom: 20px;
+}
 
 
 .cards {
@@ -70,13 +69,12 @@
     border-radius: 4px;
     cursor: pointer;
     font-weight: bold;
-    &&:hover{
+    &:hover{
         background-color: #f8f8f8;
         color: var(--coloresBotones);
         outline: 2px solid var(--coloresBotones);
     }
 }
-
 
 .icon_contacto{
     position: fixed;
@@ -89,7 +87,7 @@
     &&:hover{
         cursor: pointer;
         filter: drop-shadow(0 0 6px black);
-        transform:rotate(1deg);
+        transform:rotate(10deg);
         opacity: 100%;
     }
 }
