--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,10 +1,10 @@
-main.nosotros-section {
+.nosotros-section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px 10%;
+    padding: 20px 5%;
     gap: 5%;
-    p{
+    & p{
         font-size: 1.2rem;
         text-align: justify;
         color: var(--colorCardDetails);
@@ -50,8 +50,18 @@ main.nosotros-section {
 
 .map-section{
     display: flex;
-    width: 100;
-    gap: 40px;
+    width: 100%;    
     margin: 60px 0;
     justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    & h2{
+        width: 100%;
+    }
+    & p{
+        width: 40%;
+    }   
 }
+
+
+
