--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 @import "/css/loginForm.css";
 @import "/css/main.css";
 @import "/css/nosotros.css";
+@import "/css/preguntasFrecuentes.css";
 @import "/css/registerForm.css";
 @import "/css/variables.css";
 
