--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -65,3 +65,23 @@
 
 
 
+/* TABLETS */
+
+@media (max-width:768px){    
+.map-section{    
+
+    & h2{
+        width: 100%;
+    }
+    & p{
+        width: 100%;
+        margin-bottom: 20px;
+    } 
+    
+    & iframe{
+        width: 90vw;
+    }
+}
+}
+
+
