--- a/css/adoptionForm.css
+++ b/css/adoptionForm.css
@@ -98,14 +98,19 @@ button {
     }
 }
 
+@media (max-width:768px) {
+
+    .form-body {
+        background-size:contain;
+    }
+}
+
 
 /* CELULARES */
 @media (max-width: 480px) {
 
     .form-body {
-        margin: 50px auto;
-        background: url('/img/gatitos/backgroundForm.jpg') no-repeat center center / cover fixed  ;
-        
+        margin: 60px auto;            
     }
 
     .form-row {
