--- a/css/footer.css
+++ b/css/footer.css
@@ -58,6 +58,9 @@ footer p {
        flex-direction: column; 
        gap: 20px;   
        justify-content: center;
+       & a{
+        text-align: center;
+       }
     }
 
 }
